# matrix-forge

./: CHANGELOG.txt  CITATION.cff  CNAME  CONTACTS.md  CONTRIBIUTING.md  DOCUMENTATION.md  LICENCE  LICENSE  MANIFEST.in  README.md  README.txt  TODO.md  a.md  setup.py  tempname.md
.github/: CODE_OF_CONDUCT.md  CONTRIBIUTING.md
Licenses/: Apache.txt
branding/: LOGOGUIDELINES.md  logoguidelines.md
matrixforge/: __init__.py
matrixforge/matrixforge/: __init__.py
matrixforge/mf/: activation.py  layer.py  visualize.py
matrixforge/modules/: activation.py  layer.py  visualize.py
src/matrixforge/: setup.cfg  setup.py
