[metadata]
name = matrixforge
version = 23.0.1
author = Kacper Popek
author_email = popeqkacper@gmail.com
description = file: README
long_description = file: README.md, LICENSE
keywords = ml, ai
license = Apache Software License
classifiers =
    License :: OSI Approved :: Apache Software License
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Education
    Operating System :: Microsoft :: Windows
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Artificial Life
    Topic :: Scientific/Engineering :: Visualization
    Natural Language :: English
